added icons to links in navbar, ternary to display if teacher or not

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,5 +18,32 @@ a {
 }
 
 body {
-  background-color: #88effd;
+  background-color: grey;
+}
+
+.navbar-style {
+  background-color: lightblue;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+/* logo  */
+.logo {
+  height: 80px;
+  width: 80px;
+}
+
+.logo:hover {
+  opacity: 0.5;
+}
+
+/* icons */
+.nav-icon {
+  height: 80px;
+  width: 80px;
+}
+
+.nav-icon:hover {
+  opacity: 0.5;
 }
