--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,14 @@ a {
   box-sizing: border-box;
 }
 
+/* .container {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-image: url('/instruments.png');
+  background-size: cover;
+} */
+
 .bevan {
   font-family: 'Bevan', serif;
 }
